sandbox/output
StringCalculator.java:20: error: cannot find symbol
            if (i.starts("-")) {
                 ^
  symbol:   method starts(String)
  location: variable i of type String
1 error
